# glm-ocr-selfhosted

./: .dockerignore  .env.example  .gitignore  README.md  compose.yaml
claude/commands/: ocr.md
client/: ocr_client.py
config/: glmocr.config.yaml
docs/superpowers/specs/: 2026-06-17-glm-ocr-selfhosted-design.md  2026-06-25-standalone-ocr-skill-design.md
gateway/: Dockerfile  pyproject.toml
gateway/app/: auth.py  concurrency.py  config.py  documents.py  health.py  main.py  ocr_engine.py
scripts/: gen_env.sh  install_ocr_skill.sh  make_fixtures.py  verify.sh
skills/ocr/: SKILL.md
skills/ocr/agents/: openai.yaml
skills/ocr/scripts/: run_ocr.py
tests/: conftest.py  test_auth.py  test_concurrency.py  test_config.py  test_dockerignore.py  test_documents.py  test_gen_env.py  test_health.py  test_integration.py  test_ocr_route.py  test_ocr_skill_runner.py
