[project]
name = "glm-ocr-gateway"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.4",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "pypdfium2>=4.30",
  "pillow>=10",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "asgi-lifespan>=2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
